Work alignment fix

--- a/assets/scss/_pages/_work.scss
+++ b/assets/scss/_pages/_work.scss
@@ -4,7 +4,7 @@
     width: 40%;
     float: left;
     position: relative;
-    margin: 20px 5%;
+    margin: 20px 4%;
     padding: 0;
     overflow: hidden;
     border: 1px solid #999;
